--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Shaadi</string>
+    <string name="decline">Decline</string>
+    <string name="accept">Accept</string>
+    <string name="invite_accepted">Invitation Accepted</string>
+    <string name="invite_declined">Invitation Declined</string>
 </resources>
